Multiple simulations in one plot (trajectory_compare), longer timespan testing

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "configs = [\n",
     "    \"plume_track.json\",\n",
-    "    \"plume_track_totsdlj.json\"\n",
+    "    \"plume_track_totsdlj.json\",\n",
     "#     \"tijuana_interped.json\",\n",
     "#     \"tijuana_lin.json\",\n",
     "#     \"tijuana_lin_aggr.json\",\n",
@@ -114,43 +114,34 @@
     "def DeleteParticle(particle, fieldset, time):\n",
     "    particle.delete()\n",
     "\n",
-    "    \n",
-    "def exec_save_pset(data, i, runtime, dt, zpad=3, ages=True, save_snapshot=True, exec_pset=True):\n",
-    "    \"\"\"\n",
-    "    Saves a snapshot of a particle simulation and then executes.\n",
-    "    \n",
-    "    Args:\n",
-    "        data (dict)\n",
-    "        i (int)\n",
-    "        runtime (float): seconds\n",
-    "        dt (float): seconds\n",
-    "    \"\"\"\n",
+    "\n",
+    "def exec_pset(data, runtime, dt):\n",
     "    if len(data[\"pset\"]) == 0:\n",
     "        print(\"ParticleSet is empty. Passing...\", file=sys.stderr)\n",
     "        return\n",
     "    \n",
-    "    if save_snapshot:\n",
-    "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
-    "        field = None if ages else \"vector\"\n",
-    "        if data[\"cfg\"][\"shown_domain\"] is not None:\n",
-    "            dom = data[\"cfg\"][\"shown_domain\"]\n",
-    "        else:\n",
-    "            dom = data[\"domain\"]\n",
-    "        plot_particles_age(data[\"pset\"], dom, field=field,\n",
-    "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad)+\".png\",\n",
-    "                           vmax=days, field_vmax=max_v, part_size=1)\n",
-    "    \n",
-    "    if exec_pset:\n",
-    "        # temporary - TODO make it only init once\n",
-    "        k_plifetime = data[\"pset\"].Kernel(ParticleLifetime)\n",
+    "    # temporary - TODO make it only init once\n",
+    "    k_plifetime = data[\"pset\"].Kernel(ParticleLifetime)\n",
     "\n",
-    "        data[\"pset\"].execute(\n",
-    "            AdvectionRK4 + k_plifetime,\n",
-    "            runtime=timedelta(seconds=runtime),\n",
-    "            dt=timedelta(seconds=dt),\n",
-    "            recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
-    "            output_file=data[\"pfile\"]\n",
-    "        )\n",
+    "    data[\"pset\"].execute(\n",
+    "        AdvectionRK4 + k_plifetime,\n",
+    "        runtime=timedelta(seconds=runtime),\n",
+    "        dt=timedelta(seconds=dt),\n",
+    "        recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
+    "        output_file=data[\"pfile\"]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def save_pset_plot(data, i, zpad=3, ages=True):\n",
+    "    days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
+    "    field = None if ages else \"vector\"\n",
+    "    if data[\"cfg\"][\"shown_domain\"] is not None:\n",
+    "        dom = data[\"cfg\"][\"shown_domain\"]\n",
+    "    else:\n",
+    "        dom = data[\"domain\"]\n",
+    "    plot_particles_age(data[\"pset\"], dom, field=field,\n",
+    "                       savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad)+\".png\",\n",
+    "                       vmax=days, field_vmax=max_v, part_size=1)\n",
     "        \n",
     "        \n",
     "def parse_time_range(time_range, data):\n",
@@ -302,7 +293,7 @@
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 1}\")\n",
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
-    "    if cfg[\"snap_num\"] >= 200:\n",
+    "    if cfg[\"snap_num\"] >= 200 and cfg[\"save_snapshots\"]:\n",
     "        raise Exception(f\"Too many snapshots ({cfg['snap_num']}).\")\n",
     "    f[\"snap_path\"] = utils.create_path(utils.PICUTRE_DIR / f\"{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
@@ -333,20 +324,25 @@
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
     "    for i in range(cfg[\"snap_num\"]):\n",
-    "        exec_save_pset(f, i, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"], ages=age, save_snapshot=cfg[\"save_snapshots\"])\n",
+    "        exec_pset(f, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"])\n",
+    "        if cfg[\"save_snapshots\"]:\n",
+    "            save_pset_plot(f, i, ages=age)\n",
     "\n",
     "    # save the second-to-last frame\n",
-    "    exec_save_pset(f, cfg[\"snap_num\"], 0, 0, ages=age, save_snapshot=cfg[\"save_snapshots\"], exec_pset=False)\n",
+    "    if cfg[\"save_snapshots\"]:\n",
+    "        save_pset_plot(f, cfg[\"snap_num\"], ages=age)\n",
     "\n",
     "    # run the last interval (the remainder) if needed\n",
     "    if cfg[\"last_int\"] != 0:\n",
-    "        exec_save_pset(f, cfg[\"snap_num\"] + 1, cfg[\"last_int\"], cfg[\"simulation_dt\"], ages=age, save_snapshot=cfg[\"save_snapshots\"])\n",
+    "        exec_pset(f, cfg[\"snapshot_interval\"], cfg[\"simulation_dt\"])\n",
+    "        if cfg[\"save_snapshots\"]:\n",
+    "            save_pset_plot(f, cfg[\"snap_num\"] + 1, ages=age)\n",
     "        \n",
     "    # run one more time with 0 runtime because for some reason\n",
     "    # particles can be out-of-bounds without being deleted\n",
     "    # ??? how does this happen ???\n",
     "    # im not actually sure if this really does anything but hey its worth a shot\n",
-    "    exec_save_pset(f, 0, 0, 0, save_snapshot=False)\n",
+    "    exec_pset(f, 0, 0)\n",
     "        \n",
     "    f[\"pfile\"].export()\n",
     "    f[\"pfile\"].close()\n",
@@ -388,7 +384,9 @@
     "            universal_newlines=True\n",
     "        )\n",
     "        stdout, stderr = magick_sp.communicate()\n",
-    "        print((stdout, stderr))"
+    "        print((stdout, stderr))\n",
+    "    else:\n",
+    "        print(\"no gif generated\")"
    ]
   }
  ],
