--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -101,6 +101,12 @@
     "    return date + np.timedelta64(hour, \"h\")\n",
     "\n",
     "\n",
+    "def parse_time(time):\n",
+    "    d = \"\".join(str(time).split(\"T\")[0].split(\"-\"))\n",
+    "    t = \"\".join(str(time).split(\"T\")[1].split(\":\")[:2])\n",
+    "    return d, t\n",
+    "\n",
+    "\n",
     "def dataset_from_mat(grid_mat_path, current_mat_path, remove_land_currents):\n",
     "    grid_mat = scipy.io.loadmat(grid_mat_path)\n",
     "    current_mat = scipy.io.loadmat(current_mat_path)\n",
@@ -141,31 +147,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_prefix = \"Tot_SDLJ_20200810\"\n",
-    "start = 0\n",
-    "incr = 100"
+    "start_time = np.datetime64(\"2020-08-01T01:00\")\n",
+    "end_time = np.datetime64(\"2020-08-14T13:00\")\n",
+    "incr = np.timedelta64(1, \"h\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "ds_total = None\n",
-    "for i in range(start, 2400, incr):\n",
-    "    name = utils.MATLAB_DIR / f\"{file_prefix}_{str(i).zfill(4)}.mat\"\n",
-    "    if name.is_file():\n",
-    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", name, True)\n",
+    "current_time = start_time\n",
+    "\n",
+    "while current_time <= end_time:\n",
+    "    date_parsed, time_parsed = parse_time(current_time)\n",
+    "    filename = utils.MATLAB_DIR / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
+    "    if filename.is_file():\n",
+    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", filename, True)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
     "            ds_total = xr.concat([ds_total, ds], dim=\"time\")\n",
-    "        data = scipy.io.loadmat(name)\n",
     "    else:\n",
-    "        print(f\"file {name} not found\")"
+    "        print(f\"file {filename} not found\")\n",
+    "    current_time += incr"
    ]
   },
   {
@@ -174,7 +183,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_total.to_netcdf(f\"current_netcdfs/{file_prefix}.nc\")"
+    "date_parsed, _ = parse_time(start_time)\n",
+    "ds_total.to_netcdf(f\"current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")\n",
+    "print(f\"saved to current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"saved to current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")"
    ]
   },
   {
