Stop matlab engine after use

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -337,7 +337,9 @@
     "    target_interped_v[i] = uv_array[1]\n",
     "    \n",
     "target_interped_u[np.where(no_data)] = np.nan\n",
-    "target_interped_v[np.where(no_data)] = np.nan"
+    "target_interped_v[np.where(no_data)] = np.nan\n",
+    "\n",
+    "eng.quit()"
    ]
   },
   {
