Remove automatic region generating monstrosities

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## thredds man\n",
+    "# access thredds\n",
     "\n",
-    "the purpose of this notebook is just to get data from thredds and save it so that I don't have to wait for the very fat data every time I test\n",
-    "\n",
-    "takes data from `generate_regions_auto` (the pickle files) to slice out smaller regions of data with actual data\n",
-    "\n",
-    "larger spans of time are possible now that only smaller regions are being saved\n",
-    "\n",
-    "### note\n",
-    "\n",
-    "to generate netcdf files for different data, change the `dataset_url` variable and rerun the whole notebook"
+    "getting different regions of current data manually instead of using the auto-generated regions."
    ]
   },
   {
@@ -23,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -33,13 +27,39 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pickle\n",
+    "import time\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from parcels import FieldSet\n",
-    "from datetime import timedelta, datetime\n",
     "\n",
-    "import utils"
+    "import utils\n",
+    "from parcels_utils import xr_dataset_to_fieldset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = slice(np.datetime64(\"2020-08-10T00\"), np.datetime64(\"2020-08-11T00\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.step"
    ]
   },
   {
@@ -50,11 +70,21 @@
    "source": [
     "dataset_url_6kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_2kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "filename_dict = {\n",
-    "    dataset_url_1kmhourly: \"west_coast_1km_hourly\",\n",
-    "    dataset_url_2kmhourly: \"west_coast_2km_hourly\",\n",
-    "    dataset_url_6kmhourly: \"west_coast_6km_hourly\"\n",
+    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_chunks = 50\n",
+    "\n",
+    "thredds_data = {\n",
+    "    utils.DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    utils.DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    utils.DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
     "}"
    ]
   },
@@ -64,68 +94,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CHANGE THIS TO CHANGE THE DATA RETRIEVED ###\n",
-    "dataset_url = dataset_url_6kmhourly\n",
-    "### ######################################## ###\n",
+    "def get_region(data):\n",
+    "    time_range = get_time_slice(data[2])\n",
+    "    if data[5]:\n",
+    "        lat_range = utils.expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
+    "        lon_range = utils.expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
+    "    else:\n",
+    "        lat_range = data[3]\n",
+    "        lon_range = data[4]\n",
+    "    return dict(\n",
+    "        name = data[0],\n",
+    "        category = data[1],\n",
+    "        time = time_range,\n",
+    "        lat = lat_range,\n",
+    "        lon = lon_range,\n",
+    "        domain = {\n",
+    "            \"S\": lat_range[0],\n",
+    "            \"N\": lat_range[1],\n",
+    "            \"W\": lon_range[0],\n",
+    "            \"E\": lon_range[1],\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "num_chunks = 50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "netcdf_data = xr.open_dataset(dataset_url, chunks={\"time\": num_chunks})\n",
-    "netcdf_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f\"regions_{filename_dict[dataset_url]}.p\", \"rb\") as f:\n",
-    "    regions = pickle.load(f)\n",
-    "regions"
+    "def get_latest_span(delta):\n",
+    "    # GMT, data recorded hourly\n",
+    "    time_now = np.datetime64(\"now\", \"h\")\n",
+    "    return (time_now - delta, time_now)\n",
+    "\n",
+    "\n",
+    "def get_time_slice(time_range):\n",
+    "    if len(time_range) == 2:\n",
+    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
+    "    if len(time_range) == 3:\n",
+    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save slice of time to file\n",
+    "### about tj_sample\n",
     "\n",
-    "\"data size should be less than 55 Mb, but you may be able to get larger requests through without chunking\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# time_start = 73000\n",
-    "# time_finish = 73083\n",
-    "# sliced_data = netcdf_data.isel(time=slice(time_start, time_finish))\n",
-    "# sliced_data\n",
+    "the purpose of tj_sample is a quick and dirty way to sample the thredds data from a bunch of different times to find out the positions of where data exists. data in close time ranges could all have the same holes in data, and we would never know if data was supposed to be there in the first place.\n",
     "\n",
-    "# get data from a period of time (from latest date going backwards)\n",
-    "timespan = np.timedelta64(7, 'D')\n",
-    "# timespan = np.timedelta64(12,'h')\n",
-    "# time_finish = netcdf_data[\"time\"].max()\n",
-    "# time_start = time_finish - timespan\n",
-    "\n",
-    "# this is the timeframe i've been testing\n",
-    "time_start = np.datetime64(\"2020-06-16T21:00:00.000000000\")\n",
-    "time_finish = np.datetime64(\"2020-06-23T21:00:00.000000000\")\n",
-    "\n",
-    "sliced_data = netcdf_data.sel(time=slice(time_start, time_finish))\n",
-    "sliced_data"
+    "so tj_sample is generated for the sole purpose of creating a mask showing where data shouldn't exist."
    ]
   },
   {
@@ -134,34 +146,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# megabytes\n",
-    "total_size = sliced_data.nbytes / 1024 / 1024\n",
-    "total_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "data_regions = np.empty(len(regions), dtype=xr.core.dataset.Dataset)\n",
-    "for i in range(len(regions)):\n",
-    "    new_region = sliced_data.sel(lat=slice(regions[i][0][0], regions[i][0][1]), lon=slice(regions[i][1][0], regions[i][1][1]))\n",
-    "    print(f\"region {i} data megabytes: {new_region.nbytes / 1024 / 1024}\")\n",
-    "    data_regions[i] = new_region"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / filename_dict[dataset_url])\n",
-    "print(save_dir)"
+    "region_data = [\n",
+    "    (\"tj_sample\", utils.DATA_1KM, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
+    "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river_now\", DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "]"
    ]
   },
   {
@@ -170,10 +167,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(data_regions)):\n",
-    "    filename = f\"region{i}.nc\"\n",
+    "regions = []\n",
+    "for rd in region_data:\n",
+    "    new_reg = get_region(rd)\n",
+    "    new_reg[\"dataset\"] = thredds_data[new_reg[\"category\"]].sel(\n",
+    "        time=new_reg[\"time\"],\n",
+    "        lat=slice(new_reg[\"lat\"][0], new_reg[\"lat\"][1]),\n",
+    "        lon=slice(new_reg[\"lon\"][0], new_reg[\"lon\"][1]),\n",
+    "    )\n",
+    "    regions.append(new_reg)\n",
+    "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in regions:\n",
+    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / utils.filename_dict[r[\"category\"]])\n",
+    "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
-    "    data_regions[i].to_netcdf(save_dir / filename)\n",
+    "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
     "    print(f\"saved to {save_dir / filename}\")\n",
     "print(\"done\")"
    ]
