--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -41,33 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = slice(np.datetime64(\"2020-08-10T00\"), np.datetime64(\"2020-08-11T00\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.step"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dataset_url_6kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_2kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\""
@@ -126,6 +99,7 @@
     "    if len(time_range) == 2:\n",
     "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
     "    if len(time_range) == 3:\n",
+    "        # step size is an integer in hours\n",
     "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])"
    ]
   },
