Add out-of-bounds deletion, fix NaT issue with plotting

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -107,6 +107,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### format of region_data stuff\n",
+    "\n",
+    "(name, resolution, time range, lat range, lon range, expand range)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### about tj_sample\n",
     "\n",
     "the purpose of tj_sample is a quick and dirty way to sample the thredds data from a bunch of different times to find out the positions of where data exists. data in close time ranges could all have the same holes in data, and we would never know if data was supposed to be there in the first place.\n",
@@ -122,9 +131,9 @@
    "source": [
     "region_data = [\n",
     "    (\"tj_sample\", utils.DATA_1KM, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T00\", \"2020-08-14T14\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
     "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
     "#     (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
