--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -102,16 +102,33 @@
     "\n",
     "max_v = 0.6 # for display purposes only, so the vector field colors don't change every iteration\n",
     "\n",
-    "class TimedParticle(JITParticle):\n",
+    "class ThreddsParticle(JITParticle):\n",
     "    lifetime = Variable(\"lifetime\", initial=0, dtype=np.float32)\n",
     "    spawntime = Variable(\"spawntime\", initial=attrgetter(\"time\"), dtype=np.float32)\n",
-    "\n",
+    "    # out of bounds\n",
+    "    oob = Variable(\"oob\", initial=0, dtype=np.int32)\n",
     "    \n",
-    "def ParticleLifetime(particle, fieldset, time):\n",
+    "    \n",
+    "def AgeParticle(particle, fieldset, time):\n",
     "    particle.lifetime += particle.dt\n",
-    "\n",
     "    \n",
+    "    \n",
+    "def TestOOB(particle, fieldset, time):\n",
+    "    u, v = fieldset.UV[time, particle.depth, particle.lat, particle.lon]\n",
+    "    if math.fabs(u) < 1e-14 and math.fabs(v) < 1e-14:\n",
+    "        particle.oob = 1\n",
+    "    else:\n",
+    "        particle.oob = 0\n",
+    "\n",
+    "        \n",
+    "def DeleteOOB(particle, fieldset, time):\n",
+    "    if particle.oob == 1:\n",
+    "        print(\"Particle [%d] oob (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon))\n",
+    "        particle.delete()\n",
+    "\n",
+    "\n",
     "def DeleteParticle(particle, fieldset, time):\n",
+    "    print(\"Particle [%d] lost (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon))\n",
     "    particle.delete()\n",
     "\n",
     "\n",
@@ -121,10 +138,12 @@
     "        return\n",
     "    \n",
     "    # temporary - TODO make it only init once\n",
-    "    k_plifetime = data[\"pset\"].Kernel(ParticleLifetime)\n",
+    "    k_age = data[\"pset\"].Kernel(AgeParticle)\n",
+    "    k_oob = data[\"pset\"].Kernel(TestOOB)\n",
+    "    k_deloob = data[\"pset\"].Kernel(DeleteOOB)\n",
     "\n",
     "    data[\"pset\"].execute(\n",
-    "        AdvectionRK4 + k_plifetime,\n",
+    "        AdvectionRK4 + k_age + k_oob + k_deloob,\n",
     "        runtime=timedelta(seconds=runtime),\n",
     "        dt=timedelta(seconds=dt),\n",
     "        recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
@@ -250,7 +269,7 @@
     "        p_lons[sp_repeat * len(cfg[\"spawn_points\"]):] = cfg[\"spawn_points\"].T[1][:remainder]\n",
     "\n",
     "    # set up ParticleSet and ParticleFile\n",
-    "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=TimedParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
+    "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=ThreddsParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
     "    save_path = part_path / f\"particle_{f['name']}.nc\"\n",
     "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path)\n",
     "    print(f\"Particle trajectories for {f['name']} will be saved to {save_path}\")\n",
@@ -373,18 +392,11 @@
     "\n",
     "for f in files:\n",
     "    if f[\"cfg\"][\"save_snapshots\"]:\n",
-    "        magick_sp = subprocess.Popen(\n",
-    "            [\n",
-    "                \"magick\", \"-delay\", str(gif_delay),\n",
-    "                str(f[\"snap_path\"]) + \"/*.png\", # path to the snapshots to stitch\n",
-    "                utils.PICUTRE_DIR / f\"{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
-    "            ],\n",
-    "            stdout=subprocess.PIPE,\n",
-    "            stderr=subprocess.PIPE,\n",
-    "            universal_newlines=True\n",
+    "        utils.create_gif(\n",
+    "            gif_delay,\n",
+    "            str(f[\"snap_path\"]) + \"/*.png\",\n",
+    "            utils.PICUTRE_DIR / f\"{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\"\n",
     "        )\n",
-    "        stdout, stderr = magick_sp.communicate()\n",
-    "        print((stdout, stderr))\n",
     "    else:\n",
     "        print(\"no gif generated\")"
    ]
