Fix major problem with passing cell arrays into matlab engine

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -325,19 +325,24 @@
     "\n",
     "eng = matlab.engine.start_matlab()\n",
     "\n",
-    "u_list = target_interped_u.tolist()\n",
-    "v_list = target_interped_v.tolist()\n",
+    "target_smoothed_u = target_interped_u.copy()\n",
+    "target_smoothed_v = target_interped_v.copy()\n",
+    "u_list = target_smoothed_u.tolist()\n",
+    "v_list = target_smoothed_v.tolist()\n",
     "\n",
     "for i in range(len(u_list)):\n",
-    "    uv_mat = matlab.double([u_list[i], v_list[i]])\n",
-    "    uv_smooth = eng.smoothn(uv_mat, \"robust\")\n",
-    "    uv_array = np.empty(uv_smooth.size)\n",
-    "    uv_array[:] = uv_smooth\n",
-    "    target_interped_u[i] = uv_array[0]\n",
-    "    target_interped_v[i] = uv_array[1]\n",
+    "    u_mat = matlab.double(u_list[i])\n",
+    "    v_mat = matlab.double(v_list[i])\n",
+    "    uv_smooth = eng.smoothn([u_mat, v_mat], \"robust\")\n",
+    "    u_array = np.empty(uv_smooth[0].size)\n",
+    "    v_array = np.empty(uv_smooth[1].size)\n",
+    "    u_array[:] = uv_smooth[0]\n",
+    "    v_array[:] = uv_smooth[1]\n",
+    "    target_smoothed_u[i] = u_array\n",
+    "    target_smoothed_v[i] = v_array\n",
     "    \n",
-    "target_interped_u[np.where(no_data)] = np.nan\n",
-    "target_interped_v[np.where(no_data)] = np.nan\n",
+    "target_smoothed_u[np.where(no_data)] = np.nan\n",
+    "target_smoothed_v[np.where(no_data)] = np.nan\n",
     "\n",
     "eng.quit()"
    ]
@@ -356,8 +361,8 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = utils.conv_to_dataarray(target_interped_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v = utils.conv_to_dataarray(target_interped_v, target[\"xrds\"][\"v\"])\n",
+    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target[\"xrds\"][\"u\"])\n",
+    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target[\"xrds\"][\"v\"])\n",
     "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
    ]
   },
