--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -120,12 +120,6 @@
     "    else:\n",
     "        particle.oob = 0\n",
     "\n",
-    "        \n",
-    "def DeleteOOB(particle, fieldset, time):\n",
-    "    if particle.oob == 1:\n",
-    "        print(\"Particle [%d] oob (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon))\n",
-    "        particle.delete()\n",
-    "\n",
     "\n",
     "def DeleteParticle(particle, fieldset, time):\n",
     "    print(\"Particle [%d] lost (%g %g %g %g)\" % (particle.id, particle.time, particle.depth, particle.lat, particle.lon))\n",
@@ -140,10 +134,9 @@
     "    # temporary - TODO make it only init once\n",
     "    k_age = data[\"pset\"].Kernel(AgeParticle)\n",
     "    k_oob = data[\"pset\"].Kernel(TestOOB)\n",
-    "    k_deloob = data[\"pset\"].Kernel(DeleteOOB)\n",
     "\n",
     "    data[\"pset\"].execute(\n",
-    "        AdvectionRK4 + k_age + k_oob + k_deloob,\n",
+    "        AdvectionRK4 + k_age + k_oob,\n",
     "        runtime=timedelta(seconds=runtime),\n",
     "        dt=timedelta(seconds=dt),\n",
     "        recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
