Thredds data matches source data

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -34,6 +34,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
+    "import scipy.spatial\n",
     "\n",
     "import utils\n",
     "from parcels_utils import get_file_info\n",
@@ -47,9 +48,36 @@
    "outputs": [],
    "source": [
     "files = [\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
     "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_nearest_index(ref, t, lat, lon):\n",
+    "    return (t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1])\n",
+    "\n",
+    "\n",
+    "def get_nearest_current(ref, t, lat, lon):\n",
+    "    index = get_nearest_index(ref, t, lat, lon)\n",
+    "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up kdtrees because im lazy\n",
+    "for f in files:\n",
+    "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
+    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
    ]
   },
   {
