--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -147,8 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = np.datetime64(\"2020-08-01T01:00\")\n",
-    "end_time = np.datetime64(\"2020-08-14T13:00\")\n",
+    "start_time = np.datetime64(\"2020-08-01T01:00\", \"m\")\n",
+    "end_time = np.datetime64(\"2020-08-14T13:00\", \"m\")\n",
     "incr = np.timedelta64(1, \"h\")"
    ]
   },
