In depth vector field comparison with more OI data

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -27,6 +27,7 @@
    "outputs": [],
    "source": [
     "from datetime import timedelta\n",
+    "import math\n",
     "\n",
     "import cartopy\n",
     "import cartopy.crs as ccrs\n",
@@ -49,8 +50,19 @@
    "source": [
     "files = [\n",
     "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200801.nc\", 1, name=\"tot_sdlj\"),\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comparing fieldset vectors\n",
+    "\n",
+    "takes the first vector field, and checks each vector. finds the closest vector in the second vector field, and finds their angle and magnitude difference\n",
+    "\n",
+    "note it might take a few minutes to run"
    ]
   },
   {
@@ -59,13 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nearest_index(ref, t, lat, lon):\n",
-    "    return (t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1])\n",
-    "\n",
-    "\n",
-    "def get_nearest_current(ref, t, lat, lon):\n",
-    "    index = get_nearest_index(ref, t, lat, lon)\n",
-    "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]"
+    "def get_nearest_index(ref, lat, lon):\n",
+    "    return ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]"
    ]
   },
   {
@@ -78,6 +85,76 @@
     "for f in files:\n",
     "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
     "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# kind of hardcoded\n",
+    "ang_diff = np.full(files[0][\"xrds\"][\"u\"].shape, np.nan, dtype=np.float32)\n",
+    "mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
+    "\n",
+    "for t, i, j in np.ndindex(ang_diff.shape):\n",
+    "    time = files[0][\"xrds\"][\"time\"].values[t]\n",
+    "    u = files[0][\"xrds\"][\"u\"].values[t, i, j]\n",
+    "    if np.isnan(u) or time not in files[1][\"xrds\"][\"time\"]:\n",
+    "        continue\n",
+    "    # OI data is missing some time values\n",
+    "    t_other = np.where(files[1][\"xrds\"][\"time\"].values == time)[0][0]\n",
+    "    lat = files[0][\"xrds\"][\"lat\"][i].values\n",
+    "    lon = files[0][\"xrds\"][\"lon\"][j].values\n",
+    "    lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
+    "    if abs(lat - files[1][\"xrds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"xrds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
+    "        continue\n",
+    "    v = files[0][\"xrds\"][\"v\"].values[t, i, j]\n",
+    "    u_other = files[1][\"xrds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
+    "    v_other = files[1][\"xrds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
+    "    mag = np.sqrt(u * u + v * v)\n",
+    "    mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
+    "    dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
+    "    # rounding errors cause arccos to go out of domain\n",
+    "    if dot_mag_rat > 1:\n",
+    "        ang = 0\n",
+    "    elif dot_mag_rat < -1:\n",
+    "        ang = 180\n",
+    "    else:\n",
+    "        ang = np.arccos(dot_mag_rat) * 180 / math.pi\n",
+    "    ang_diff[t, i, j] = ang\n",
+    "    mag_diff[t, i, j] = abs(mag - mag_other)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nanmean(ang_diff), np.nanmedian(ang_diff), np.nanmax(ang_diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nanmean(mag_diff), np.nanmedian(mag_diff), np.nanmax(mag_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### simulation stuff\n",
+    "\n",
+    "i think this just spawns a single particle and make it do stuff\n",
+    "\n",
+    "i dont remember"
    ]
   },
   {
